--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
         </div>
         </li>
 
-        <li><a href="mailto:relroy5499@gmail.com?subject=Inquiry">Contact Us</a><br /></li>
+        <li><a href="mailto:sweetst592@gmail.com?subject=Inquiry">Contact Us</a><br /></li>
         <li><a href="/aboutus">About Us</a><br /></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
