added shipping charges to totals and ability to have separate shipping per user

--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -34,7 +34,7 @@
   <% @carted_products.each do |each_product| %>
     <% @order_sub_total += each_product.sub_total %>
   <% end %>
-  <div class="cptotal"><strong><h3>Total = <%= number_to_currency @order_sub_total %></h3></strong></div>
+  <div class="cptotal"><strong><h3>Total = <%= number_to_currency @order_sub_total %></h3></strong><h3>Shipping = <%= number_to_currency @order.shipping_total %></h3></strong></div>
     <div class="cptotal2">
       <button><a href="/orders/<%= @order.id %>">Confirm and PAY</a></button>
     </div>
