--- a/app/views/user_mailer/order_submission.html.erb
+++ b/app/views/user_mailer/order_submission.html.erb
@@ -10,8 +10,8 @@
       from: <%= @order.user.business %><br>
       <%= @order.user.address %>
       <%= @order.user.city %>, <%= @order.user.state %> <%= @order.user.zip_code %> <br>
-      <a href="tel:+1-815-932-4010"><%= @order.user.phone %></a><br>
-      for a total of <%= number_to_currency @order.total %>
+      <a href="tel:+1-<%= @order.user.phone %>"><%= @order.user.phone %></a><br>
+      for a total of <%= (number_to_currency @order.total + number_to_currency @order.shipping_total) %>
       <br>
     </p>
 
