--- a/app/views/user_mailer/order_confirmation.html.erb
+++ b/app/views/user_mailer/order_confirmation.html.erb
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Thank you for your order!</h1>
-    <h3>Your order total charged to your card was <%= (number_to_currency @order.total + number_to_currency @order.shipping_total) %></h3>
+    <h3>Your order total charged to your card was <%= number_to_currency @order.total_with_shipping %> including shipping %></h3>
     
   <h3>ORDER</h3>
     <table>
