--- a/app/views/user_mailer/order_confirmation.html.erb
+++ b/app/views/user_mailer/order_confirmation.html.erb
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Thank you for your order!</h1>
-    <h3>Your order total charged to your card was <%= number_to_currency @order.total_with_shipping %> including shipping. </h3>
+    <h3>Your order total charged to your card was <mark><%= number_to_currency @order.total_with_shipping %></mark>. This includes shipping charges unless it is a local pickup. </h3>
     
   <h3>ORDER</h3>
     <table>
@@ -15,6 +15,9 @@
       <tr>
         <th>Name</th>&nbsp;&nbsp;
         <th>Small Bag</th>
+        <th>Total</th>
+        <th>Shipping Total</th>
+        <th>Total Charges</th>
       </tr>
      </thead>
      
@@ -24,6 +27,10 @@
       <tr>
         <td><%= carted_product.ws_product.name %></td>&nbsp;&nbsp;
         <center><td><%= carted_product.sm_bag_qty %></td></center>
+        <center><td><%= number_to_currency @order.total %></td></center>
+        <center><td><%= number_to_currency @order.shipping_total %></td></center>
+        <center><td><%= number_to_currency @order.total_with_shipping %></td></center>
+
       <% end %>
       </tr>
      </tbody>
