added a callout image to clisk for ordering or signing up for wholesale accounts

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -13,6 +13,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.ws_callout {
+  float:right;
+  
+}
 #pic-1, #pic-2{
    width:100px;
     height:100px;
