--- a/app/views/user_mailer/order_confirmation.html.erb
+++ b/app/views/user_mailer/order_confirmation.html.erb
@@ -14,10 +14,10 @@
      <thead>
       <tr>
         <th>Name</th>&nbsp;&nbsp;
-        <th>Small Bag</th>
-        <th>Total</th>
-        <th>Shipping Total</th>
-        <th>Total Charges</th>
+        <th>Small Bag</th>&nbsp;&nbsp;
+        <th>Total</th>&nbsp;&nbsp;
+        <th>Shipping Total</th>&nbsp;&nbsp;
+        <th>Total Charges</th>&nbsp;&nbsp;
       </tr>
      </thead>
      
@@ -27,11 +27,10 @@
       <tr>
         <td><%= carted_product.ws_product.name %></td>&nbsp;&nbsp;
         <center><td><%= carted_product.sm_bag_qty %></td></center>&nbsp;&nbsp;
+      <% end %>
         <center><td><%= number_to_currency @order.total %></td></center>&nbsp;&nbsp;
         <center><td><%= number_to_currency @order.shipping_total %></td></center>&nbsp;&nbsp;
         <center><td><%= number_to_currency @order.total_with_shipping %></td></center>&nbsp;&nbsp;
-
-      <% end %>
       </tr>
      </tbody>
     </table>
