changed fundraising items model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <% end %>
           <% end %>
           <% if user_signed_in? && current_user.fundraiser? %>
-          <li><a href="/ws_products">Order My Fundraiser Products</a></li>        
+          <li><a href="/fundraiser_items">Order My Fundraiser Products</a></li>        
             <% end %>
 
        
