fixing errors for fundraising model

--- a/app/views/fundraiser_items/_form.html.erb
+++ b/app/views/fundraiser_items/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-<%= form_for @fundraiser do |f| %>
+<%= form_for @fundraiser_item do |f| %>
 
   <div class ="row">
 
