--- a/app/views/fundraiser_items/index.html.erb
+++ b/app/views/fundraiser_items/index.html.erb
@@ -1,2 +1,50 @@
-<h1>FundraiserItems#index</h1>
-<p>Find me in app/views/fundraiser_items/index.html.erb</p>
+<div class="container-fluid">
+  <% if user_signed_in? && current_user.fundraiser? %>
+<h1>Popcorn Flavors/ Fundraiser Prices</h1>
+<h3>Please add your items by each product line. Keep in mind that you MUST order in quantities of 50 bags. These may be broken into different flavors as long as there are 50 bags or 100 bags, etc. If you see a message at the top of your screen you probably do not have the correct amount required to go to your cart to finish the order.</h3>
+<% if current_user.admin? %>
+<button type="button" class="btn btn-success"><a href="/ws_products/new"><h5>ADD A NEW Fundraiser Product</h5></a></button>
+<% end %>
+
+<div class="carted_length">
+  <% if @carted_products %>
+  <h3>Your total so far: <%= number_to_currency @order.total %> for <%= $total_carted_products %> bags of popcorn.</h3><% if $total_carted_products < 50 %><h3>You need <%= 50 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 50 && $total_carted_products < 100 %><h3>You need <%= 100 - $total_carted_products %> more bags to go to your cart.</h3><% end %>
+    <% if @order.carted_products %>
+  <% @carted_products.each do |p| %>
+  <h5><button><a href="/carted_products/<%= p.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/carted_products/<%= p.id %>" rel="nofollow"><button class="glyphicon glyphicon-trash">&nbsp;Delete Product</button></a><%= p.fundraiser_item.name %>&nbsp;- <%= p.sm_bag_qty %> bags
+  <% end %>
+  <% end %>
+    <center><button class="glyphicon glyphicon-shopping-cart"><a href="/orders/<%=@order.id %>">Go To Cart</a></button></center></h5>
+    <% end %>
+</div>
+   
+  <table class="table table-striped table-bordered table-responsive">
+    <thead>
+      <tr>
+        <th class="bg-primary">Flavor</th>
+        <th class="bg-primary">Sm Bag</th>
+        <!-- <th class="bg-primary">Lg Bag</th> -->
+        <!-- <th class="bg-primary">One Gal Tin</th> -->
+        <!-- <th class="bg-primary">Two Gal Tin</th> -->
+        <!-- <th class="bg-primary">3 1/2 Gal Tin</th> -->
+        <!-- <th class="bg-primary">6 1/2 Gal Tin</th> -->
+        <th class="bg-primary"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @fundraiser_items.each do |product| %>
+      <tr>
+        <td><a href="/fundraiser_items/<%= product.id %>"><%= product.name %></a><br><% if current_user.admin %><button><a href="/fundraiser_items/<%= product.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/fundraiser_items/<%= product.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Product</button></a><% end %>&nbsp;&nbsp;&nbsp;<img src="<%= product.photo %>" height="65"></td>
+        <%= form_for @carted_product do |f| -%>
+        <td><%= number_to_currency product.sm_bag %><br><%= f.label :sm_bag_qty %></b><br>
+        <%= f.text_field  :sm_bag_qty, :size => 3 %>
+        <%= f.hidden_field :fundraiser_item_id, value: product.id %>
+        </td>
+          <td><%= f.submit "Update Cart" %>
+        <% end -%></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <% end %>
+<div>
