added ability to show orders index with funraiser items

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,11 @@
         <% end %>
         <td><%= order.created_at.strftime("%A, %D, %I:%M %p") %></td>
         <td><%= number_to_currency order.sub_total %></td>
+        <% if order.user.ws_cust? %>
         <td><%= carted_product.ws_product.name %></td>
+        <% elsif %>
+        <td><%= carted_product.fundraiser_item.name %></td>
+        <% end %>
         <td><%= carted_product.sm_bag_qty %></td>
     <% end %>
     <% end %>
