added another price teir to fundraiser items

--- a/app/views/fundraiser_items/_form.html.erb
+++ b/app/views/fundraiser_items/_form.html.erb
@@ -24,8 +24,16 @@
       <h3 class="panel-title">Price</h3>
     </div>
       <div class="panel-body">
-        <%= f.label :sm_bag %>
+        <%= f.label :price_tier_1 %>
         <%= f.text_field :sm_bag, :required => true %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :price_tier_2 %>
+        <%= f.text_field :sm_bag_2, :required => true %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :price_tier_3 %>
+        <%= f.text_field :sm_bag_3, :required => true %>
       </div>
   </div>
   
