--- a/app/views/fundraiser_items/index.html.erb
+++ b/app/views/fundraiser_items/index.html.erb
@@ -36,7 +36,7 @@
       <tr>
         <td><a href="/fundraiser_items/<%= product.id %>"><%= product.name %></a><br><% if current_user.admin %><button><a href="/fundraiser_items/<%= product.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/fundraiser_items/<%= product.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Product</button></a><% end %>&nbsp;&nbsp;&nbsp;<img src="<%= product.photo %>" height="65"></td>
         <%= form_for @carted_product do |f| -%>
-        <td><%= number_to_currency product.sm_bag %><br><%= f.label :sm_bag_qty %></b><br>
+        <td>Between <%= number_to_currency product.sm_bag_3 %> and <%= number_to_currency product.sm_bag %><br><%= f.label :sm_bag_qty %></b><br>
         <%= f.text_field  :sm_bag_qty, :size => 3 %>
         <%= f.hidden_field :fundraiser_item_id, value: product.id %>
         </td>
