created teir pricing for fundraiser

--- a/app/views/fundraiser_items/_form.html.erb
+++ b/app/views/fundraiser_items/_form.html.erb
@@ -25,7 +25,7 @@
     </div>
       <div class="panel-body">
         <%= f.label :price_tier_1 %>
-        <%= f.text_field :sm_bag, :required => true %>
+        <%= f.text_field :sm_bag_1, :required => true %>
       </div>
       <div class="panel-body">
         <%= f.label :price_tier_2 %>
