--- a/app/views/fundraiser_items/index.html.erb
+++ b/app/views/fundraiser_items/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="carted_length">
   <% if @carted_products %>
-  <h3>Your total so far: <%= number_to_currency @order.total %> for <%= $total_carted_products %> bags of popcorn.</h3><% if $total_carted_products < 50 %><h3>You need <%= 50 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 50 && $total_carted_products < 100 %><h3>You need <%= 100 - $total_carted_products %> more bags to go to your cart.</h3><% end %>
+  <h3>Your total so far: <%= number_to_currency @order.total %> for <%= $total_carted_products %> bags of popcorn.</h3><% if $total_carted_products < 50 %><h3>You need <%= 50 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 50 && $total_carted_products < 100 %><h3>You need at least <%= 100 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 100 && $total_carted_products < 150 %><h3>You need at least <%= 150 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 150 && $total_carted_products < 200 %><h3>You need at least <%= 200 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 200 && $total_carted_products < 250 %><h3>You need at least <%= 250 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 250 && $total_carted_products < 300 %><h3>You need at least <%= 300 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 300 && $total_carted_products < 350 %><h3>You need at least <%= 350 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 350 && $total_carted_products < 400 %><h3>You need at least <%= 400 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 400 && $total_carted_products < 450 %><h3>You need at least <%= 450 - $total_carted_products %> more bags to go to your cart.</h3><% elsif $total_carted_products > 500 && $total_carted_products < 550 %><h3>You need at least <%= 550 - $total_carted_products %> more bags to go to your cart.</h3><% end %>
     <% if @order.carted_products %>
   <% @carted_products.each do |p| %>
   <h5><button><a href="/carted_products/<%= p.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/carted_products/<%= p.id %>" rel="nofollow"><button class="glyphicon glyphicon-trash">&nbsp;Delete Product</button></a><%= p.fundraiser_item.name %>&nbsp;- <%= p.sm_bag_qty %> bags
@@ -36,7 +36,7 @@
       <tr>
         <td><a href="/fundraiser_items/<%= product.id %>"><%= product.name %></a><br><% if current_user.admin %><button><a href="/fundraiser_items/<%= product.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/fundraiser_items/<%= product.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Product</button></a><% end %>&nbsp;&nbsp;&nbsp;<img src="<%= product.photo %>" height="65"></td>
         <%= form_for @carted_product do |f| -%>
-        <td>Between <%= number_to_currency product.sm_bag_3 %> and <%= number_to_currency product.sm_bag %><br><%= f.label :sm_bag_qty %></b><br>
+        <td>Between <%= number_to_currency product.sm_bag_3 %> and <%= number_to_currency product.sm_bag_1 %><br><%= f.label :sm_bag_qty %></b><br>
         <%= f.text_field  :sm_bag_qty, :size => 3 %>
         <%= f.hidden_field :fundraiser_item_id, value: product.id %>
         </td>
