added fundraiser button on products index page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,6 +25,9 @@
       <p><a href="/users/sign_up" ><%= image_tag "ws-callout.png" %></a></p>
       <% end %>
     </div>
+     <div class="fundraiser_button">
+      <p><a href="/fundraiser_pictures" ><%= image_tag "fundraiser.gif" %></a></p>
+    </div>
   </div>
     <section class="slider">
       <div id="main-carousel" class="carousel slide" data-ride="carousel">
