--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -14,8 +14,10 @@
   background-size: cover;
 }
 .ws_callout {
-  float:right;
-  
+  float:right;  
+}
+.fundraiser_button{
+  margin-left:30px;
 }
 #pic-1, #pic-2{
    width:100px;
