added more details for fundrasing needs

--- a/app/views/fundraiser_pictures/index.html.erb
+++ b/app/views/fundraiser_pictures/index.html.erb
@@ -7,7 +7,10 @@
   <ol>
     <li>Contact Sweet Street to discuss whether your organization qualifies as non for profit. You can do this by clicking contact us on this website or call <a href="tel:+1-815-932-4010">815-932-4010.</a></li>
     <li>Provide your non for profit tax letter to Sweet Street for record keeping.</li>
-    <li></li>
+    <li>You will need to order 50 bags of popcorn at a time for your fundraiser. You will be able to place this on your organizations credit card.</li>
+    <li>You may be able to order a variety of Cheese Popcorn, Caramel Corn, and or a mix of Cheese and Caramel Corn.</li>
+    <li>We will arrange a time for you to pick up your product.</li>
+    <li>Now it's time to get busy making money for your organization! ENJOY!</li>
   </ol>
   <% if user_signed_in? && current_user.admin? %> 
     <button type="button" class="btn btn-success"><a href="/fundraiser_pictures/new"><h5>ADD A NEW Fundraiser Picture</h5></a></button>
