--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -36,6 +36,8 @@
         <% end %>
     <% end %>
     <% end %>
+    <% elsif %>
+    <h1>There is no Order History</h1>
   <% end %>
       </tr>
   </tbody>
