--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -128,8 +128,8 @@
             <% if user_signed_in? %>
               <li><a href="/users/sign_out" >Sign Out</a></li>
             <% else %>
-            <li><a href="/users/sign_in" >Wholesale Sign in</a></li>
-            <li><a href="/users/sign_up">Wholesale Inquiry</a></li>
+            <li><a href="/users/sign_in" >Wholesale/Fundraiser Sign in</a></li>
+            <li><a href="/users/sign_up">Wholesale Inquiry</a> NOT FOR Fundraiser inquiries</li>
             <% end %>
           </ul>
           <!-- Clearfix -->
