--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,13 +66,13 @@
                 <%= image_tag "Sweet-street-logo.png" %>
               </div>
               <div class="modal-body">
-               Monday     10am - 8pm<br>
-               Tuesday    10am - 8pm<br>
-               Wednesday  10am - 8pm<br>
-               Thursday   10am - 8pm<br>
-               Friday     10am - 8pm<br>
-               Saturday   10am - 8pm<br>
-               Sunday     Noon - 5pm
+               Monday     10am - 7pm<br>
+               Tuesday    10am - 7pm<br>
+               Wednesday  10am - 7pm<br>
+               Thursday   10am - 7pm<br>
+               Friday     10am - 7pm<br>
+               Saturday   10am - 6pm<br>
+               Sunday     CLOSED
               </div><br><br><br>
               <center><p><a href="https://goo.gl/maps/xmHFNJNM9r52" target="blank">Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</a></p>
               <p><a href="tel:+1-815-932-4010">Call 1-815-932-4010</a></p></center>
